--- a/demo1/pom.xml
+++ b/demo1/pom.xml
@@ -7,7 +7,7 @@
 	<name>demo1 Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
-	   	<dependency><groupId>org.hsqldb</groupId><artifactId>hsqldb</artifactId><version>2.3.0</version></dependency>
+<!--	   	<dependency><groupId>org.hsqldb</groupId><artifactId>hsqldb</artifactId><version>2.3.0</version></dependency>-->
 		<dependency><groupId>org.json</groupId><artifactId>json</artifactId><version>20090211</version></dependency>
 		<dependency><groupId>commons-fileupload</groupId><artifactId>commons-fileupload</artifactId><version>1.3</version></dependency>
 <!-- 		<dependency><groupId>javax.servlet</groupId><artifactId>servlet-api</artifactId><version>2.5</version><scope>provided</scope></dependency> -->
