--- a/demo1/pom.xml
+++ b/demo1/pom.xml
@@ -11,8 +11,8 @@
 		<dependency><groupId>org.json</groupId><artifactId>json</artifactId><version>20090211</version></dependency>
 		<dependency><groupId>commons-fileupload</groupId><artifactId>commons-fileupload</artifactId><version>1.3</version></dependency>
  		<dependency><groupId>javax.servlet</groupId><artifactId>servlet-api</artifactId><version>2.2</version><scope>provided</scope></dependency>
- 	<!--	<dependency><groupId>javax.servlet</groupId><artifactId>jstl</artifactId><version>1.2</version><scope>provided</scope></dependency>-->
- 	<!--	<dependency><groupId>javax.el</groupId><artifactId>el-api</artifactId><version>2.2</version><scope>provided</scope></dependency>-->
+ 		<dependency><groupId>javax.servlet</groupId><artifactId>jstl</artifactId><version>1.2</version><scope>provided</scope></dependency>
+ 		<dependency><groupId>javax.el</groupId><artifactId>el-api</artifactId><version>2.2</version><scope>provided</scope></dependency>
 	</dependencies>
 	<build>
 		<finalName>demo1</finalName>
