--- a/demo1/pom.xml
+++ b/demo1/pom.xml
@@ -7,15 +7,47 @@
 	<name>demo1 Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
-	   	<dependency><groupId>org.hsqldb</groupId><artifactId>hsqldb</artifactId><version>2.3.0</version></dependency>
-		<dependency><groupId>org.json</groupId><artifactId>json</artifactId><version>20090211</version></dependency>
 		<dependency><groupId>commons-fileupload</groupId><artifactId>commons-fileupload</artifactId><version>1.3</version></dependency>
+		<dependency><groupId>org.json</groupId><artifactId>json</artifactId><version>20090211</version></dependency>
+		<dependency><groupId>org.hsqldb</groupId><artifactId>hsqldb</artifactId><version>2.3.0</version></dependency>
+		
  		<dependency><groupId>javax.servlet</groupId><artifactId>servlet-api</artifactId><version>2.5</version><scope>provided</scope></dependency>
 		<dependency><groupId>javax.servlet</groupId><artifactId>jstl</artifactId><version>1.2</version></dependency>
 		<dependency><groupId>javax.el</groupId><artifactId>el-api</artifactId><version>2.2</version><scope>provided</scope></dependency>
 		<dependency><groupId>taglibs</groupId><artifactId>standard</artifactId><version>1.1.2</version></dependency>
+		
+		<dependency>
+			<groupId>ch.sql</groupId>
+			<artifactId>informix</artifactId>
+			<version>0.0.9</version>
+			<scope>system</scope>
+     		<systemPath>${project.basedir}/src/main/resources/META-INF/lib/informix-0.0.9.jar</systemPath>
+		</dependency>
 	</dependencies>
 	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-dependency-plugin</artifactId>
+					<version>2.4</version>
+					<executions>
+						<execution>
+							<id>copy</id>
+							<phase>install</phase>
+							<goals>
+								<goal>copy-dependencies</goal>
+							</goals>
+							<configuration>
+								<outputDirectory>
+									${project.build.directory}/lib
+								</outputDirectory>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 		<finalName>demo1</finalName>
 	</build>
 </project>
